overflow hidden fix again

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@
 
 .body {
   background-color: #F8F2FC;
+  overflow: hidden;
 }
 
 .red {
