--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -1,5 +1,6 @@
 .body {
     background-color: map-get($colors, background );
+    overflow: hidden;
 }
 .red {
     background-color: red;
